--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 <h1>home</h1>
-<h2>revision one</h2>
-<p>The quick brown fox jumps over the lazy dog</p>
+<h2>revision two</h2>
+<p>How quickly daft jumping zebras vex</p>
 </body>
 </html>
