--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 <h1>home</h1>
-<h2>revision two</h2>
+<h2>revision three</h2>
 <p>How quickly daft jumping zebras vex</p>
 </body>
 </html>
